--- a/test.ipynb
+++ b/test.ipynb
@@ -2,32 +2,416 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from generate_data import *"
+    "import numpy as np\n",
+    "from src.dataset import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'generate_mean_values' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-baf3640b39a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgenerate_mean_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_dist\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_val\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_val\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'generate_mean_values' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[-0.13946609, -0.4137471 ],\n",
+       "       [-0.71651214, -0.72202249],\n",
+       "       [-0.54537792, -0.79458966],\n",
+       "       [-0.79862129, -0.48596494],\n",
+       "       [-0.91277063, -0.51641447]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "generate_mean_values(num_dist=5, min_val=-1, max_val=0)"
+    "mean1 = generate_mean_values(num_dist=5, min_val=-1, max_val=0)\n",
+    "mean1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.36217621, 0.70768662],\n",
+       "       [0.74674622, 0.69109292],\n",
+       "       [0.68918041, 0.37360012],\n",
+       "       [0.6681348 , 0.33984866],\n",
+       "       [0.57279387, 0.32580716]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean2 = generate_mean_values(num_dist=5, min_val=0, max_val=1)\n",
+    "mean2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22809982, 0.03152846, 0.12435097, 0.49786553, 0.11815523])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight1 = generate_weights(num_dist=5)\n",
+    "weight1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.22038099, 0.20731366, 0.23072685, 0.15141562, 0.19016288])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight2 = generate_weights(num_dist=5)\n",
+    "weight2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0],\n",
+       "       [0, 1]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov = np.array([[1,0],[0,1]])\n",
+    "cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([-0.13946609, -0.4137471 ]), array([[1, 0],\n",
+       "         [0, 1]])), (array([-0.71651214, -0.72202249]), array([[1, 0],\n",
+       "         [0, 1]])), (array([-0.54537792, -0.79458966]), array([[1, 0],\n",
+       "         [0, 1]])), (array([-0.79862129, -0.48596494]), array([[1, 0],\n",
+       "         [0, 1]])), (array([-0.91277063, -0.51641447]), array([[1, 0],\n",
+       "         [0, 1]]))]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_gauss1 = [(muy1, cov) for muy1 in mean1]\n",
+    "list_gauss1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([0.36217621, 0.70768662]), array([[1, 0],\n",
+       "         [0, 1]])), (array([0.74674622, 0.69109292]), array([[1, 0],\n",
+       "         [0, 1]])), (array([0.68918041, 0.37360012]), array([[1, 0],\n",
+       "         [0, 1]])), (array([0.6681348 , 0.33984866]), array([[1, 0],\n",
+       "         [0, 1]])), (array([0.57279387, 0.32580716]), array([[1, 0],\n",
+       "         [0, 1]]))]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_gauss2 = [(muy2, cov) for muy2 in mean2]\n",
+    "list_gauss2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.29848052, 1.52523136]),\n",
+       " array([-0.04411206, -0.04332472]),\n",
+       " array([-0.56933024,  0.22417178]),\n",
+       " array([0.08674419, 0.21524376]),\n",
+       " array([0.00559713, 0.75413519]),\n",
+       " array([-0.62225748,  0.68885966]),\n",
+       " array([-0.51135456,  0.31817422]),\n",
+       " array([0.04666969, 0.80447922]),\n",
+       " array([-1.65283891, -0.62742354]),\n",
+       " array([ 0.68809312, -0.64560326]),\n",
+       " array([-1.42941856, -0.70548613]),\n",
+       " array([ 0.87282552, -1.29186206]),\n",
+       " array([-1.37961778,  0.5504028 ]),\n",
+       " array([-0.57287102, -0.19892978]),\n",
+       " array([-1.34426014, -0.95394412]),\n",
+       " array([-0.71346802,  1.11468715]),\n",
+       " array([-0.63356288, -0.92121452]),\n",
+       " array([-0.59672687,  0.44553691]),\n",
+       " array([-0.67061347,  0.75565158]),\n",
+       " array([-0.906931  ,  0.81408667]),\n",
+       " array([0.69637782, 0.07837181]),\n",
+       " array([-2.01952321, -0.42634951]),\n",
+       " array([ 1.15433892, -0.40292853]),\n",
+       " array([-1.65428738, -0.60954844]),\n",
+       " array([-0.89858081, -3.35526147]),\n",
+       " array([-1.28759211, -1.23252925]),\n",
+       " array([-0.57035614, -0.95401736]),\n",
+       " array([-2.03425791, -0.62675138]),\n",
+       " array([-1.30975028, -0.60880835]),\n",
+       " array([-0.15079149, -1.04633836]),\n",
+       " array([-1.2522494 , -1.24187206]),\n",
+       " array([ 0.02453115, -1.49850407]),\n",
+       " array([-0.56400564, -0.31106087]),\n",
+       " array([-0.52452022, -0.90354165]),\n",
+       " array([-1.25846744,  1.50477287]),\n",
+       " array([-0.11807007, -1.4276396 ]),\n",
+       " array([ 0.25365919, -0.6551319 ]),\n",
+       " array([-0.96631989,  1.23670426]),\n",
+       " array([0.18188245, 0.12327789]),\n",
+       " array([ 0.12244289, -0.56959404]),\n",
+       " array([ 2.67241229, -0.16175197]),\n",
+       " array([-0.99691155,  1.97162269]),\n",
+       " array([-0.32292322, -1.49973193]),\n",
+       " array([-0.9392613 ,  0.59416165]),\n",
+       " array([-0.71248606, -1.98847606]),\n",
+       " array([ 0.54664156, -1.14250767]),\n",
+       " array([-1.45439882, -0.10430796]),\n",
+       " array([-0.81718622, -0.95226036]),\n",
+       " array([-0.42854458,  1.20092262]),\n",
+       " array([ 0.7650624 , -2.27939827]),\n",
+       " array([-0.29619275, -1.35404591]),\n",
+       " array([-0.51106364,  0.77812081]),\n",
+       " array([-1.41372985, -1.54812106]),\n",
+       " array([-0.4358178 , -1.64500141]),\n",
+       " array([-1.41100571,  0.91400056]),\n",
+       " array([-1.76237799, -2.00996414]),\n",
+       " array([ 1.57556993, -0.91681541]),\n",
+       " array([-1.0262469 , -1.17999212]),\n",
+       " array([ 2.51764798, -1.15743515]),\n",
+       " array([ 0.26130176, -0.6109616 ]),\n",
+       " array([-0.45434341, -0.00915741]),\n",
+       " array([-1.36915358, -2.51503707]),\n",
+       " array([-0.70790452, -2.70338255]),\n",
+       " array([ 0.49925632, -2.0011806 ]),\n",
+       " array([-1.90856488, -0.17261995]),\n",
+       " array([-0.57849748,  0.21748036]),\n",
+       " array([-1.03699731,  0.82411668]),\n",
+       " array([-1.57603925, -0.48812564]),\n",
+       " array([-1.00962528, -0.65337917]),\n",
+       " array([ 0.62172102, -0.80555508]),\n",
+       " array([-0.28182373, -0.91854132]),\n",
+       " array([-1.98946321,  0.27469482]),\n",
+       " array([-1.79252515, -1.76941719]),\n",
+       " array([ 0.3599265, -0.7365569]),\n",
+       " array([-2.81598745, -0.8438477 ]),\n",
+       " array([2.41012974, 1.07904892]),\n",
+       " array([-0.46628573, -1.75935312]),\n",
+       " array([-2.1508846 ,  0.20713158]),\n",
+       " array([-0.13365861, -0.18969293]),\n",
+       " array([ 0.20324397, -1.32303727]),\n",
+       " array([-0.61982007, -1.64160636]),\n",
+       " array([-2.41018372, -1.04740564]),\n",
+       " array([-1.05985374, -2.50448952]),\n",
+       " array([ 0.37844259, -0.95493263]),\n",
+       " array([-1.27448837,  1.55120677]),\n",
+       " array([-0.58212554, -1.59415896]),\n",
+       " array([-0.28130202, -0.98223185]),\n",
+       " array([-0.35684574,  0.81706791]),\n",
+       " array([-0.55242249,  0.86352727]),\n",
+       " array([-1.3381959 , -1.95143703]),\n",
+       " array([-1.90680464, -1.09731809]),\n",
+       " array([-1.40887164, -0.47974482]),\n",
+       " array([-0.47267202,  0.11082823]),\n",
+       " array([-1.72291503,  0.39533619]),\n",
+       " array([-1.02048596,  0.59610525]),\n",
+       " array([-1.45991392, -1.56243215]),\n",
+       " array([-1.55117797, -0.75692977]),\n",
+       " array([-1.03761598, -1.59675763]),\n",
+       " array([0.2495408 , 0.28740881]),\n",
+       " array([ 0.67808236, -0.95822911])]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_mixed_gauss_dist(weight1, list_gauss1, size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-0.47712323,  0.52090213]),\n",
+       " array([0.98332691, 0.12753062]),\n",
+       " array([-0.5537041,  0.3706064]),\n",
+       " array([0.70392989, 0.71815699]),\n",
+       " array([1.30003314, 0.29782209]),\n",
+       " array([-0.95409406,  2.52508044]),\n",
+       " array([-0.34158899, -0.6311561 ]),\n",
+       " array([2.0332517, 0.2150892]),\n",
+       " array([-1.31062996,  0.98899493]),\n",
+       " array([-0.34692573,  2.17371621]),\n",
+       " array([0.36862047, 0.37382667]),\n",
+       " array([1.43281738, 0.50973235]),\n",
+       " array([ 1.6079914 , -0.59400827]),\n",
+       " array([-0.13065299,  0.5095405 ]),\n",
+       " array([1.73631902, 2.03024122]),\n",
+       " array([-0.36766649,  0.9340715 ]),\n",
+       " array([-0.97140488,  1.0713844 ]),\n",
+       " array([0.26259443, 0.29532338]),\n",
+       " array([-0.32258358,  1.46118329]),\n",
+       " array([2.31829239, 1.81709189]),\n",
+       " array([0.77837835, 0.91939201]),\n",
+       " array([-0.96560035,  1.11959234]),\n",
+       " array([ 0.89200497, -0.26256519]),\n",
+       " array([0.75581001, 0.127888  ]),\n",
+       " array([1.90688894, 1.82079775]),\n",
+       " array([0.27423455, 0.38734714]),\n",
+       " array([1.4428552 , 2.00212731]),\n",
+       " array([ 0.21872007, -0.59943116]),\n",
+       " array([-1.02829377, -0.33366783]),\n",
+       " array([-0.5854661 ,  0.09738691]),\n",
+       " array([0.42284304, 0.83212108]),\n",
+       " array([ 0.63024763, -2.05466503]),\n",
+       " array([1.6825734 , 0.93618702]),\n",
+       " array([2.99392946, 0.92871353]),\n",
+       " array([ 1.52483008, -0.90607912]),\n",
+       " array([1.0771669 , 0.58152524]),\n",
+       " array([0.74781285, 1.46061638]),\n",
+       " array([0.77084888, 1.97637681]),\n",
+       " array([-0.13061231,  0.8226245 ]),\n",
+       " array([3.37362728, 1.89503283]),\n",
+       " array([ 0.005374  , -1.88864117]),\n",
+       " array([ 0.54572686, -0.18778747]),\n",
+       " array([1.17899394, 0.67250964]),\n",
+       " array([-0.59781554,  1.42888363]),\n",
+       " array([ 1.30934425, -0.516829  ]),\n",
+       " array([0.65761681, 0.59599312]),\n",
+       " array([1.5714001 , 0.54902651]),\n",
+       " array([0.49929065, 0.81988455]),\n",
+       " array([0.81780046, 0.29763549]),\n",
+       " array([0.58422868, 1.28547784]),\n",
+       " array([ 0.77675415, -0.76963522]),\n",
+       " array([2.15349481, 1.92801593]),\n",
+       " array([-1.11530774,  1.46119714]),\n",
+       " array([-0.31869859, -0.81143166]),\n",
+       " array([1.57218156, 0.39365171]),\n",
+       " array([0.01799597, 0.84815604]),\n",
+       " array([-0.49651393,  1.92710997]),\n",
+       " array([1.7347395 , 2.01893214]),\n",
+       " array([0.81847896, 0.5637385 ]),\n",
+       " array([-0.43562518, -0.73820237]),\n",
+       " array([0.83257195, 1.78404117]),\n",
+       " array([ 1.23237374, -0.7990698 ]),\n",
+       " array([0.90425189, 1.03178268]),\n",
+       " array([-0.51057727,  0.0335486 ]),\n",
+       " array([-0.50925602,  0.4621383 ]),\n",
+       " array([0.92837553, 0.32915353]),\n",
+       " array([1.13568613, 0.1589281 ]),\n",
+       " array([0.88201334, 0.44810856]),\n",
+       " array([0.52994621, 0.95475407]),\n",
+       " array([-0.11499607,  0.37670552]),\n",
+       " array([ 0.19512536, -0.32196267]),\n",
+       " array([0.29929771, 1.39878849]),\n",
+       " array([-0.85517036, -1.18107636]),\n",
+       " array([0.23006507, 2.27325568]),\n",
+       " array([-0.466648  , -0.23440655]),\n",
+       " array([-2.23037909, -1.26743872]),\n",
+       " array([0.37221979, 1.73383222]),\n",
+       " array([1.55610354, 0.61060929]),\n",
+       " array([0.91095627, 0.98367155]),\n",
+       " array([0.7688774 , 0.72413287]),\n",
+       " array([ 0.36520384, -0.28173639]),\n",
+       " array([1.56913315, 1.84815911]),\n",
+       " array([-0.22173432,  0.01831695]),\n",
+       " array([-0.19631087, -0.39089519]),\n",
+       " array([1.49987386, 2.06679961]),\n",
+       " array([1.73903797, 1.36329613]),\n",
+       " array([ 1.46876534, -0.55851506]),\n",
+       " array([0.81662289, 1.3263721 ]),\n",
+       " array([1.23983802, 1.71490006]),\n",
+       " array([ 1.45667828, -1.75254122]),\n",
+       " array([1.06008999, 1.4950956 ]),\n",
+       " array([1.38164394, 0.87898712]),\n",
+       " array([0.41572634, 0.0214478 ]),\n",
+       " array([1.56492319, 1.6423807 ]),\n",
+       " array([ 0.92797249, -0.00325209]),\n",
+       " array([1.10541192, 1.67356106]),\n",
+       " array([1.79185826, 0.26011934]),\n",
+       " array([1.53270462, 2.18075553]),\n",
+       " array([-1.13439649,  0.7654266 ]),\n",
+       " array([ 1.124669  , -0.76645577])]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_mixed_gauss_dist(weight2, list_gauss2, size=100)"
    ]
   },
   {
